# credence-engine

./: .gitignore  CLAUDE.md  README.md  SPEC.md  pyproject.toml
credence/: __init__.py  julia_bridge.py
credence/agents/: baselines.py  bayesian_agent.py  langchain_agent.py  langchain_enhanced.py
credence/analysis/: metrics.py  visualisation.py
credence/environment/: __init__.py  benchmark.py  categories.py  tools.py
credence/inference/: __init__.py  beta_posterior.py  decision.py  voi.py
credence_agents/: __init__.py  julia_bridge.py
credence_agents/agents/: baselines.py  bayesian_agent.py  langchain_agent.py  langchain_enhanced.py
credence_agents/analysis/: metrics.py  visualisation.py
credence_agents/environment/: __init__.py  benchmark.py  tools.py
credence_agents/inference/: __init__.py
examples/tool_routing/: README.md  demo.py  tools.py
experiments/: run_ablation.py  run_drift.py  run_full_comparison.py  run_stationary.py
results/: RESULTS.md
results/ablation/: ablation_results.json
src/agents/: baselines.py  bayesian_agent.py  common.py  langchain_agent.py  langchain_enhanced.py
src/analysis/: __init__.py  metrics.py  visualisation.py
src/environment/: __init__.py  benchmark.py  categories.py  questions.py  tools.py
src/inference/: __init__.py  beta_posterior.py  decision.py  voi.py
tests/: conftest.py  test_baselines.py  test_bayesian_agent.py  test_benchmark.py  test_beta_posterior.py  test_coverage_table.py  test_decision.py  test_questions.py  test_tools.py  test_verification.py  test_voi.py
